<resources>
    <string name="app_name">那样记账</string>
    <string name="text_zh">简体字</string>
    <string name="toast_add_record_fail">记账失败，请重试</string>
    <string name="toast_modify_record_fail">记录修改失败</string>
    <string name="toast_sort_fail">排序失败</string>
    <string name="toast_least_one_type">请至少保留一个类型</string>
    <string name="toast_delete_fail">删除失败</string>
    <string name="toast_type_img_fail">类型图片获取失败</string>
    <string name="toast_type_save_fail">类型保存失败</string>
    <string name="toast_type_is_exist" formatted="true">%1$s&#160;类型已经存在</string>
    <string name="toast_record_delete_fail">记录删除失败</string>
    <string name="toast_current_sum_money_fail">本月支出收入总数获取失败</string>
    <string name="toast_records_fail">获取记录列表失败</string>
    <string name="toast_init_types_fail">初始化类型数据失败</string>
    <string name="toast_get_types_fail">获取类型数据失败</string>
    <string name="toast_get_statistics_fail">获取统计数据失败</string>
    <string name="toast_get_month_summary_fail">获取该月汇总数据失败</string>
    <string name="toast_get_type_summary_fail">获取类型汇总数据失败</string>
    <string name="toast_not_install_market">您的手机没有安装Android应用市场</string>
    <string name="toast_not_install_email">您的手机没有安装邮件应用</string>
    <string name="toast_not_install_alipay">谢谢，您没有安装支付宝客户端</string>
    <string name="toast_is_not_writable_external">备份失败，外部存储不可用</string>
    <string name="toast_restore_fail">恢复备份失败</string>
    <string name="toast_restore_success">恢复备份成功</string>
    <string name="toast_backup_list_fail">备份文件列表获取失败</string>
    <string name="toast_open_auto_backup">注意：没有存储权限，本地备份自动备份已关闭</string>
    <string name="toast_backup_success">备份成功</string>
    <string name="toast_backup_fail">备份失败</string>
    <string name="toast_success_record">记账成功</string>
    <string name="toast_get_review_fail">获取回顾数据失败</string>
    <string name="toast_get_review_sum_money_fail">获取回顾汇总数据失败</string>
    <string name="toast_move_backup_files_success">备份文件夹修改并迁移成功</string>
    <string name="toast_move_backup_files_fail">修改失败</string>
    <string name="toast_save_assets_success">保存成功</string>
    <string name="toast_save_assets_fail">保存失败</string>
    <string name="toast_choose_account">请选择不同账户</string>
    <string name="toast_date_null">日期为空，请重新进入界面后尝试</string>
    <string name="toast_transfer_fail">转账失败</string>
    <string name="toast_submit_now">正在提交，请稍等..</string>
    <string name="toast_delete_transfer_fail">删除转账记录失败</string>
    <string name="toast_out_assets_null">修改前转出账户为空，请重试</string>
    <string name="toast_in_assets_null">修改前转入账户为空，请重试</string>
    <string name="toast_assets_null">还没有创建资产账户</string>
    <string name="toast_not_digital">数字不合法</string>
    <string name="toast_lock_record">记录已锁定</string>
    <string name="text_widget_today_outlay">今日支出</string>
    <string name="text_widget_month_outlay">本月支出</string>
    <string name="text_widget_month_budget">剩余月预算</string>
    <string name="text_month_outlay">本月支出</string>
    <string name="text_month_income">本月收入</string>
    <string name="text_month_remaining_budget">剩余预算</string>
    <string name="text_assets">净资产</string>
    <string name="text_net_assets">设置资产</string>
    <string name="text_home_footer_tip">只显示最近100条记录，统计页面可以查看更多数据</string>
    <string name="text_current_month_empty_tip">本月未开始记账\n\n点击加号，开始记账</string>
    <string name="shortcuts_add_record">记一笔</string>
    <string name="shortcuts_statistics">历史统计</string>
    <string name="text_storage">存储权限</string>
    <string name="text_storage_content">存储权限仅用于自动和手动备份数据到本地，便于数据的保存和恢复，请授予权限。</string>
    <string name="text_storage_permission_tip">存储权限仅用于自动和手动备份数据到本地，便于数据的保存和恢复，请到设置界面手动授权，否则将放弃本地备份会恢复功能。</string>
    <string name="text_storage_permission_tip_setting">去设置开启</string>
    <string name="text_storage_permission_fail">存储权限申请失败</string>
    <string name="text_go_on">继续</string>
    <string name="text_tip_backup_fail">自动备份失败</string>
    <string name="text_add_record">记一笔</string>
    <string name="text_add_record_successive">记一笔（连续）</string>
    <string name="text_modify_record">修改</string>
    <string name="text_outlay">支出</string>
    <string name="text_income">收入</string>
    <string name="text_today">今天</string>
    <string name="text_yesterday">昨天</string>
    <string name="hint_enter_money">输入金额</string>
    <string name="hint_enter_remark">输入备注</string>
    <string name="text_tip_type_delete">该记录的类型已经被删除，已默认选择了第一个类型</string>
    <string name="text_know">我知道了</string>
    <string name="type_eat">餐饮</string>
    <string name="type_clothes">衣服</string>
    <string name="type_humanity">礼物</string>
    <string name="type_candy">零食</string>
    <string name="type_3c">电子产品</string>
    <string name="type_pet">宠物</string>
    <string name="type_pill">医疗</string>
    <string name="type_calendar">日用</string>
    <string name="type_pluralism">兼职</string>
    <string name="type_salary">薪资</string>
    <string name="text_type_manage">分类管理</string>
    <string name="text_delete">删除</string>
    <string name="text_delete_type_note">删除该分类后，将无法在记账页选择该分类，该分类下原有账单仍保持不变</string>
    <string name="text_delete_record_note">确定删除该记录？</string>
    <string name="text_affirm_delete">删除</string>
    <string name="text_affirm">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_sort">排序</string>
    <string name="text_drag_sort">长按拖动排序</string>
    <string name="text_done">完成</string>
    <string name="hint_enter_type_name">请输入类型名称</string>
    <string name="text_add">添加</string>
    <string name="text_modify">修改</string>
    <string name="text_outlay_type">支出类型</string>
    <string name="text_income_type">收入类型</string>
    <string name="text_save">保存</string>
    <string name="text_order">账单</string>
    <string name="text_reports">报表</string>
    <string name="text_overage">结余</string>
    <string name="text_day">日</string>
    <string name="text_unit_account">笔</string>
    <string name="text_choose_month">选择月份</string>
    <string name="text_sort_time">按时间</string>
    <string name="text_sort_money">按金额</string>
    <string name="text_empty_tip">每一笔账单，都是生活的点滴</string>
    <string name="text_small_tip">注：小于1.9%不显示</string>
    <string name="text_review">回顾</string>
    <string name="text_choose_year">选择年份</string>
    <string name="text_year">年</string>
    <string name="text_month">月</string>
    <string name="text_setting">设置</string>
    <string name="text_money">记账</string>
    <string name="text_no_setting">未设置</string>
    <string name="text_monty_budget">月预算</string>
    <string name="text_set_budget">设置预算</string>
    <string name="hint_enter_budget">请输入预算</string>
    <string name="text_assets_manager">资产管理</string>
    <string name="text_assets_manager_content">新建和修改资产账户</string>
    <string name="hint_enter_assets">请输入资产</string>
    <string name="text_title_symbol">货币符号</string>
    <string name="text_set_symbol">选择货币符号</string>
    <string name="text_content_symbol">只改变符号，不转换汇率</string>
    <string name="text_setting_type_manage">收支类型管理</string>
    <string name="text_setting_type_manage_content">添加、修改和排序</string>
    <string name="text_fast_accounting">快速记账</string>
    <string name="text_fast_tip">打开APP直接记账</string>
    <string name="text_successive_record">连续记账</string>
    <string name="text_successive_record_tip">提示：长按首页添加按钮，连续记账</string>
    <string name="text_lock_record">锁定记录</string>
    <string name="text_last_asset">记录上次使用的资产账户</string>
    <string name="text_lock_record_off">记录可以编辑、删除</string>
    <string name="text_lock_record_on">记录不可以编辑、删除</string>
    <string name="text_manager">管理</string>
    <string name="text_backup">备份</string>
    <string name="text_backup_restore">备份与恢复</string>
    <string name="text_backup_local_cloud">本地和云端备份</string>
    <string name="text_go_backup">立即备份</string>
    <string name="text_backup_save" formatted="true">备份文件将保存到%1$s</string>
    <string name="text_restore">恢复备份</string>
    <string name="text_restore_content" formatted="true">备份文件将从%1$s读取</string>
    <string name="text_restore_tip">备份文件名带有Auto字样表示是自动备份的文件，带有User表示是点击立即备份按钮手动备份的文件。</string>
    <string name="text_list_restore">以下是备份文件，点击恢复：</string>
    <string name="text_auto_backup">自动备份</string>
    <string name="text_auto_backup_content">数据有改变时备份（不可手动关闭）</string>
    <string name="text_cloud_backup">云备份</string>
    <string name="text_cloud_backup_service_des">自动云备份服务</string>
    <string name="text_cloud_backup_title">云盘备份</string>
    <string name="text_cloud_backup_content">WebDAV</string>
    <string name="text_about_and_more">关于 | 更多</string>
    <string name="text_feedback">反馈</string>
    <string name="text_feedback_help">反馈问题、获取帮助</string>
    <string name="text_about_content">了解我们的设计理念</string>
    <string name="text_tip">提示</string>
    <string name="text_tip_reset_settings">由于重构了设置界面代码，需要您进行重新设置 WebDAV 地址等项目，由此带来不便，敬请谅解。</string>
    <string name="text_tip_go_settings">去设置</string>
    <string-array name="symbol">
        <item>人民币 (¥)</item>
        <item>港币 (HK$)</item>
        <item>澳门币 (MOP$)</item>
        <item>新台币 (NT$)</item>
        <item>美元 ($)</item>
        <item>欧元 (€)</item>
        <item>英镑 (£)</item>
        <item>印度卢比 (₹)</item>
        <item>韩元 (₩)</item>
        <item>货币 (¤)</item>
        <item>不显示</item>
    </string-array>
    <string-array name="simple_symbol">
        <item>¥</item>
        <item>HK$</item>
        <item>MOP$</item>
        <item>NT$</item>
        <item>$</item>
        <item>€</item>
        <item>£</item>
        <item>₹</item>
        <item>₩</item>
        <item>¤</item>
        <item/>
    </string-array>
    <string-array name="theme_titles">
        <item>暗色主题</item>
        <item>亮色主题</item>
    </string-array>
    <string-array name="theme_values">
        <item>dark</item>
        <item>light</item>
    </string-array>
    <string-array name="lockScreen_titles">
        <item>关闭</item>
        <item>使用系统解锁界面</item>
        <item>使用指纹解锁界面</item>
    </string-array>
    <string-array name="lockScreen_values">
        <item>off</item>
        <item>system</item>
        <item>custom</item>
    </string-array>
    <string-array name="cloud_auto_backup_mode_titles">
        <item>不自动备份</item>
        <item>打开应用时备份</item>
        <item>退出应用时备份</item>
    </string-array>
    <string-array name="cloud_auto_backup_mode_values">
        <item>off</item>
        <item>openApp</item>
        <item>quitApp</item>
    </string-array>
    <string-array name="last_asset_titles">
        <item>只记录一个统一的资产账户</item>
        <item>按分类记录资产账户</item>
    </string-array>
    <string-array name="last_asset_values">
        <item>onlyOne</item>
        <item>byType</item>
    </string-array>
    <string name="text_about">关于</string>
    <string name="text_slogan">简单、纯粹的记账应用</string>
    <string name="text_about_Introduction">简介</string>
    <string name="text_about_detail">　　一款轻量级的记账工具。\n\n　　这是我第一个用心的作品，起源于从小到大的一个「不可思议」（钱到底花在了哪儿），工作以后尤为明显。于是「那样记账」诞生了，目的是让大家以最简单、直接的方式来记账，让这个「不可思议」不再不可思议，慢慢建立起良好的消费习惯。\n\n　　没有任何多余的权限，没有广告，没有用户系统，不保存用户任何信息，只是单纯的记录收支情况。\n\n　　「那样记账」名称取自一个人名字「娜」的谐音。</string>
    <string name="text_dev_designer">设计和开发</string>
    <string name="text_designer">总体设计</string>
    <string name="text_launcher_designer">启动图标设计</string>
    <string name="text_developer_designer">开发和部分设计</string>
    <string name="text_links">链接</string>
    <string name="text_score">评分</string>
    <string name="text_donate_content">感谢您的支持。【那样记账】是一个无广告、无任何多余权限的良心应用，由“食梦兽”个人开发，您的支持将会给予作者无限的动力，【那样记账】也将会越来越好。\n\n建议点击【复制支付宝红包码】后打开支付宝领取红包，给双方带来好处，也可以点击【复制支付宝转账码】直接支持作者。\n\n注意：捐赠不会直接带来功能上的增加。</string>
    <string name="text_privacy_policy">隐私政策</string>
    <string name="text_display">外观</string>
    <string name="text_theme">主题</string>
    <string name="text_lock">锁屏</string>
    <string name="text_luck_screen">打开应用时锁屏</string>
    <string name="text_luck_screen_add">直接进入记一笔界面</string>
    <string name="text_luck_screen_add_tip">提示：从 Shortcut 进入或打开快速记账，不需要解锁</string>
    <string name="text_other_setting">实验室</string>
</resources>